--- a/app/src/main/res/layout/adapter_billing.xml
+++ b/app/src/main/res/layout/adapter_billing.xml
@@ -1,73 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground"
-    android:clickable="true"
-    android:padding="@dimen/padding"
-    android:orientation="horizontal">
+    android:padding="@dimen/padding">
 
 
-    <ImageView
-        android:layout_width="@dimen/goods_width"
-        android:layout_height="@dimen/goods_width"
-        android:scaleType="fitXY"
+    <imageview
+        android:id="@+id/iv_remote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_remote"
+        android:layout_alignParentRight="true"
         />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/goods_width"
-        android:layout_marginLeft="@dimen/dp_10">
-
         <TextView
+            android:id="@+id/tv_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="商品名称"
             android:textColor="@color/text_blank"
-            android:textSize="@dimen/text_base"
             android:layout_alignParentTop="true"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_hint"
-            android:textSize="@dimen/text_hint"
-            android:text="数量:1个"
             android:layout_centerVertical="true"
             />
 
         <TextView
+            android:id="@+id/tv_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_hint"
-            android:textSize="@dimen/text_hint"
-            android:text=""
+            android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/tv_num"
+            android:layout_marginLeft="@dimen/dp_10"
             />
 
         <TextView
+            android:id="@+id/tv_money"
             android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_hint"
-            android:textSize="@dimen/text_hint"
-            android:text="单价: ¥3111.11"
-            android:layout_alignParentBottom="true"
+            android:textColor="@color/text_orders_btn2"
+            android:layout_centerVertical="true"
             />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_red"
-            android:textSize="@dimen/text_hint"
-            android:text="金额: 111"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            />
-
-    </RelativeLayout>
-
-
-</LinearLayout>
+</RelativeLayout>
