--- a/app/src/main/res/layout/ui_pay_channel.xml
+++ b/app/src/main/res/layout/ui_pay_channel.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <include layout="@layout/app_toolbar" />
@@ -16,45 +17,153 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="bottom"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="@dimen/dp_40">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/orders_no_"
+                    android:textColor="@color/text_blank"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_no"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text_orders_btn1"
+                    android:layout_marginLeft="@dimen/dp_24"
+                    android:textSize="22sp"
+                    android:text="201584200545"
+                    />
+
+            </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_32"
+            android:layout_marginLeft="20dp"
+            android:gravity="bottom"
+            >
+
             <TextView
-                android:id="@+id/tv_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@string/pay_money"
+                android:textColor="@color/text_blank"
                 />
 
             <TextView
                 android:id="@+id/tv_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/text_red"
+                android:layout_marginLeft="@dimen/dp_24"
+                android:textSize="48sp"
+                android:text="55:00"
+                />
+        </LinearLayout>
+
+
+
+            <View style="@style/Line_Style" android:layout_marginTop="@dimen/dp_32" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="@string/choice_pay_type"
+                android:layout_marginTop="@dimen/margin"
+                android:textColor="@color/text_blank"
                 />
 
-            <RadioGroup
+            <LinearLayout
+                android:id="@+id/ll_wx"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="64dp"
+                android:layout_marginRight="64dp"
+                android:layout_marginTop="@dimen/margin"
+                android:gravity="center_vertical">
                 <RadioButton
+                    android:id="@+id/rb_wx"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/weixin"
                     />
-                </LinearLayout>
-
-                <RadioButton
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/zhifubao"
+                    android:src="@drawable/ic_weixin_pay"
+                    android:layout_marginLeft="@dimen/dp_10"
                     />
-
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_zfb"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="64dp"
+                android:layout_marginRight="64dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical">
                 <RadioButton
+                    android:id="@+id/rb_zfb"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/shop_pay"
+                    />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_zhifubao_pay"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_sc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="64dp"
+                android:layout_marginRight="64dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical">
+                <RadioButton
+                    android:id="@+id/rb_sc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     />
 
-            </RadioGroup>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_shouyin"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:text="商场收银"
+                    android:textColor="@color/text_blank"
+                    />
+
+        </LinearLayout>
+
+
+            <Button
+                android:id="@+id/btn_pay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/confirm_pay"
+                android:layout_marginLeft="64dp"
+                android:layout_marginRight="64dp"
+                android:layout_marginTop="@dimen/dp_40"
+                android:background="@drawable/btn_bg"
+                />
 
         </LinearLayout>
 
