--- a/app/src/main/res/layout/ui_analyze.xml
+++ b/app/src/main/res/layout/ui_analyze.xml
@@ -30,7 +30,17 @@
                 android:layout_height="240dp"
                 />
 
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_list"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
         </LinearLayout>
+
+
 
 
     </ScrollView>
