--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -40,6 +40,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -62,6 +63,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
         <TextView
+            android:id="@+id/tv_ins"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
