--- a/SmartCheck/src/main/res/layout/adapter_check.xml
+++ b/SmartCheck/src/main/res/layout/adapter_check.xml
@@ -10,18 +10,11 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="青岛啤酒"
-            android:textSize="17sp"
             />
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="食品区"
-            />
 
     </LinearLayout>
 
@@ -34,24 +27,27 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iv_minus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_minus"
             />
 
         <EditText
+            android:id="@+id/et_count"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:background="@drawable/layout_div_bg"
-            android:text="1"
             android:gravity="center"
             android:maxLines="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:inputType="number"
             />
 
         <ImageView
+            android:id="@+id/iv_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_add"
