--- a/SmartCheck/src/main/res/layout/ui_history.xml
+++ b/SmartCheck/src/main/res/layout/ui_history.xml
@@ -3,4 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_his"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
