--- a/SmartCheck/src/main/res/layout/ui_login.xml
+++ b/SmartCheck/src/main/res/layout/ui_login.xml
@@ -11,18 +11,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@drawable/edit_bg"
+        android:layout_margin="12dp"
+
         >
 
         <EditText
             android:id="@+id/et_user"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:background="@null"
+            android:hint="请输入账号"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:singleLine="true"
+            android:maxLength="16"
             />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#999999" />
 
         <EditText
             android:id="@+id/et_pass"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="40dp"
+            android:hint="请输入密码"
+            android:background="@null"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:singleLine="true"
+            android:maxLength="16"/>
 
     </LinearLayout>
 
