--- a/SmartCheck/src/main/res/layout/adapter_check.xml
+++ b/SmartCheck/src/main/res/layout/adapter_check.xml
@@ -1,60 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:padding="10dp"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
+    <TextView
+        android:id="@+id/tv_num"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:textColor="#f00"
         android:gravity="center"
-        android:layout_marginLeft="20dp"
-        android:orientation="horizontal">
+        android:background="@drawable/num_bg"
+        android:layout_margin="10dp"
+        android:layout_gravity="center_vertical"
+        />
 
-        <ImageView
-            android:id="@+id/iv_minus"
+    <LinearLayout
+        android:id="@+id/ll_item"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_toRightOf="@id/tv_num"
+        android:layout_height="wrap_content">
+
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_minus"
-            />
+            android:padding="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
 
-        <EditText
-            android:id="@+id/et_count"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/layout_div_bg"
             android:gravity="center"
-            android:maxLines="1"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:inputType="number"
-            />
+            android:layout_gravity="right"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/iv_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_add"
-            />
+            <ImageView
+                android:id="@+id/iv_minus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_minus"
+                />
+
+            <EditText
+                android:id="@+id/et_count"
+                android:layout_width="100dp"
+                android:maxWidth="160dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/layout_div_bg"
+                android:gravity="center"
+                android:maxLines="1"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:inputType="number"
+                />
+
+            <ImageView
+                android:id="@+id/iv_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_add"
+                />
+
+        </LinearLayout>
+
+
+
 
     </LinearLayout>
 
-
-
-</LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#979797"
+        android:layout_marginTop="4dp"
+        android:layout_below="@id/ll_item"
+        />
+</RelativeLayout>
