--- a/SmartCheck/src/main/res/layout/fm_his2.xml
+++ b/SmartCheck/src/main/res/layout/fm_his2.xml
@@ -1,40 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="32dp"
-    android:layout_marginBottom="32dp"
-    android:layout_marginLeft="12dp"
-    android:layout_marginRight="12dp"
-    android:background="@color/colorAccent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/edit_bg"
-    android:padding="12dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
-
-    <TextView
-        android:id="@+id/text21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-
-    <TextView
-        android:id="@+id/text22"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        />
+        android:background="@drawable/edit_bg"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:padding="12dp">
 
-    <LinearLayout
-        android:id="@+id/layout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        android:layout_below="@id/text21"
-        />
 
-</RelativeLayout></LinearLayout>
+        <TextView
+            android:id="@+id/text21"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
+        <LinearLayout
+            android:id="@+id/layout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            android:layout_below="@id/text21"
+            />
+
+    </RelativeLayout>
+
+</RelativeLayout>
