--- a/SmartCheck/src/main/res/layout/ui_query.xml
+++ b/SmartCheck/src/main/res/layout/ui_query.xml
@@ -283,7 +283,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="促销状态:"
+                    android:text="销售状态:"
                     android:textSize="16sp"
                     />
 
