--- a/SmartCheck/src/main/res/layout/ui_login.xml
+++ b/SmartCheck/src/main/res/layout/ui_login.xml
@@ -38,6 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:hint="请输入密码"
+            android:inputType="textPassword"
             android:background="@null"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
